src/main/resources/SyntaxGrammar.txt
<expression> ::= <assignment> | <operation> | <call> | <literal>
<assignment> ::= <identifier> <expression>
<varInitialization> ::= <identifier> <identifierNull> <expressionNull>
<operation> ::= <expression> <operator> <expression>
<call> ::= <identifier> <expressionLst>
<literal> ::= <any>
<varCall> ::= <identifier>
<functionDefinition> ::= <identifier> <expressionLst> <expressionLst>
<comparison> ::= <expression> <comparator> <expression>

<ifStmnt> ::= <expression> <expressionLst> <expressionLst>
<returnStmnt> ::= <expression>
<whileStmnt> ::= <expression> <expressionLst>
<forStmnt> ::= <expressionLst> <expressionLst>
<classDefinition> ::= <identifier> <identifier> <expressionLst>
<instanceGet> ::= <expression> <expression>
<instanceSet> ::= <expression> <expression>
